修改集团接口

--- a/views/about/colleges.html
+++ b/views/about/colleges.html
@@ -512,7 +512,7 @@
     <div class="jian_title">学校简介</div>
     <div class="jian_con">
         <div class="jian_con_top">
-            <div class="jian_con_top_s">{{schooltopic.list.content}}</div>
+            <div class="jian_con_top_s">{{schooltopic.list.content | safe}}</div>
         </div>
         <div class="jian_con_rigth">
             <img src="{{schooltopic.list.des_images}}" alt="">
