--- a/views/about/middle.html
+++ b/views/about/middle.html
@@ -312,7 +312,7 @@
         <img src="{{schooltopic.list.sch_introduce_map}}" alt="">
         <div class="jie_rigth">
             <div class="jie_rigth_title"></div>
-            <div class="jie_rigth_con">{{schooltopic.list.content}}</div>
+            <div class="jie_rigth_con">{{schooltopic.list.content | safe}}</div>
         </div>
     </div>
 </div>
