修改集团模板

--- a/views/about/grouptemplate.html
+++ b/views/about/grouptemplate.html
@@ -43,12 +43,12 @@
         <div class="sort-container clearfix">
           <div class="sort-left wow fadeInLeft" data-wow-delay=".1s">
             <img src="{{schooltopic.list.advantage_map}}" alt="" style="height:524px;width:600px;">
-            <p class="pictuer-des">剑桥文理学院</p>
+            <!-- <p class="pictuer-des">剑桥文理学院</p> -->
           </div>
           <div class="sort-right wow fadeInRight" data-wow-delay=".3s">
             <dl>
               <!--<dt class="sort-title"><span class="list-item">1</span>卓越的地理位置</dt>-->
-              <dd class="sort-des">{{schooltopic.list.advantage}}</dd>
+              <dd class="sort-des">{{advantage}}</dd>
             </dl>
             <!-- <dl>
                 <dt class="sort-title"><span>2</span>先进的住宿条件</dt>
@@ -119,19 +119,19 @@
           <ul class="item-body-list clearfix">
                 <li>
                   <h2>项目介绍</h2>
-                  <p class="list-text">{{schooltopic.list.project_into}}</p>
+                  <p class="list-text" style="overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:5;">{{schooltopic.list.project_into}}</p>
                 </li>
                 <li>
                   <h2>学费信息</h2>
-                  <p class="list-text">{{schooltopic.list.tuition_info}}</p>
+                  <p class="list-text" style="overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:5;">{{schooltopic.list.tuition_info}}</p>
                 </li>
                 <li>
                   <h2>奖学金信息</h2>
-                  <p class="list-text">{{schooltopic.list.scholarship_info}}</p>
+                  <p class="list-text" style="overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:5;">{{schooltopic.list.scholarship_info}}</p>
                 </li>
                 <li>
                   <h2>金吉列申请优势</h2>
-                  <p class="list-text">{{schooltopic.list.apply_advantage}}</p>
+                  <p class="list-text" style="overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:5;">{{schooltopic.list.apply_advantage}}</p>
                 </li>
           </ul>
         </div>
