--- a/views/about/middle.html
+++ b/views/about/middle.html
@@ -321,10 +321,10 @@
     <div class="you_title"></div>
     <div class="you_con clearfix">
         <div class="you_con_le" style="overflow-y: scroll;overflow-x: hidden;height: 240px;">
-            {% for item in advantage %}
+            {% for item in schooltopic.list.advantage %}
             <div class="you_con_le_">
                 <i class="you_con_le_dian"></i><!--<span style="color: #c13232">性价比高：</span></span>-->
-                <span>{{item}}</span>
+                <span>{{ item }}</span>
             </div><br/>
             {% endfor %}
         </div>
@@ -395,12 +395,12 @@
         <div class="swiper-container" style="width:1055px;margin: 0 auto;height:270px;">
             <div class="swiper-wrapper">
                 <div class="swiper-slide clearfix">
-            {% for init in coures %}
+                    {% for k, init in schooltopic.list.course_images %}
                 <div class="canzan-slide" {% if loop.index % 4 == 0 %} style="margin-right: 0px;" {% endif %}onmousemove="onshow('{{loop.index}}');" onmouseout="onhide('{{loop.index}}');">
                     <a target="_blank"  href="{{ item.linkurl }}"data-pid="{{item.pid}}" class="top-item" style="color: #333333;">
-                        <img src="{{ init.images.url }}" alt="{{ init.images.alt }}"/>
-                        <div id="kai_con_1" class="kai_con" style="display:block;" data-des="{{init.des}}">{{init.des}}......</div>
-                        <div id="kai_con_chang_1" class="kai_con_chang" style="display:none;">开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程开设课程</div>
+                        <img src="{{ init.url }}" alt="{{ init.alt }}"/>
+                        <div id="kai_con_1" class="kai_con" style="display:block;" data-des="{{ schooltopic.list.course_des[k] }}">{{ schooltopic.list.course_des[k] }}......</div>
+                        <div id="kai_con_chang_1" class="kai_con_chang" style="display:none;">{{ schooltopic.list.course_des[k] }}......</div>
                     </a>
                 </div>
             {% endfor %}
